[RF-7] cleanup & remove legacy UI
